# Hyprconnect

./: .gitignore  Cargo.toml  aa.json  flake.nix
hyprconnect/: .project  pom.xml
hyprconnect/src/main/java/io/github/rodrigoafernandez/: App.java
hyprconnect/src/main/java/io/github/rodrigoafernandez/protocol/: IdentityBody.java  Packet.java  PacketBody.java
hyprconnect/src/main/java/io/github/rodrigoafernandez/transfer/: DiscoveryChannel.java  TransferChannel.java  UdpDiscoveryChannel.java
hyprconnect/src/test/java/io/github/rodrigoafernandez/: AppTest.java
hyprconnect_cli/: Cargo.toml
hyprconnect_cli/src/: main.rs
hyprconnect_core/: Cargo.toml
hyprconnect_core/src/: device.rs  lib.rs
hyprconnect_core/src/plugins/: battery.rs  clipboard.rs  connectivity_report.rs  contacts.rs  find_my_phone.rs  lock.rs  mod.rs  mousepad.rs  mpris.rs  notification.rs  ping.rs  presenter.rs  run_command.rs  sftp.rs  share.rs  sms.rs  telephony.rs  volume.rs
hyprconnect_core/src/protocol/: device.rs  mod.rs
hyprconnect_core/src/transport/: mod.rs  udp.rs
src/: main.rs
